resources/app-sre/devfile-registry/devfile-io-redirector.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    run: redirector
  name: redirector
spec:
  host: docs.devfile.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: redirector
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
