resources/app-sre/devfile-registry/devfile-registry-oci-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    service: devfile-registry
  name: oci-server
spec:
  path: /v2
  to:
    kind: Service
    name: devfile-registry
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
