resources/app-sre/devfile-registry/devfile-registry-redhat-oci-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  # Cert-manager annotation set in devfile-registry-redhat.route.yaml
  # All routes using the same host share the same certificate
  labels:
    service: devfile-registry
  name: devfile-registry-oci
spec:
  host: devfile-registry.redhat.com
  path: /v2
  to:
    kind: Service
    name: devfile-registry
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
