resources/app-sre/devfile-registry/devfile-registry-redhat.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: devfile-registry
  name: devfile-registry
spec:
  host: devfile-registry.redhat.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: devfile-registry
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
