resources/app-sre/devfile-registry/devfile-registry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    service: devfile-registry
  name: index-server
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: devfile-registry
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
